--- a/css/styles.css
+++ b/css/styles.css
@@ -6,70 +6,99 @@
     -moz-user-select: none; 
     -ms-user-select: none; 
     user-select: none; 
-    
+}
+
+body{
+    padding: 20px;
+    max-height: 100vh;
+    padding: 0px;
+    margin: 0px;
+}
+
+.container{
+    display: flex;
+    margin-top: -25px;
+}
+
+.boxOne{
+    margin: 30px 20px 20px 20px;
+    max-height: 99vh;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.boxTwo{
+    margin: 30px 20px 20px 20px;
+    max-height: 88vh;
+    max-width: 60vw;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.boxOneHome{
+    margin: 30px 20px 20px 20px;
+    max-height: 88vh;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.boxTwoHome{
+    margin: 30px 20px 20px 20px;
+    max-height: 88vh;
+    max-width: 60vw;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.topMenu{
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.deleteAndEdit{
+  margin-left: 20px;
+  margin-top: 25px;
+}
+
+.happeningAndUsers{
+    width: 400px;
+    max-height: 80vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    margin-bottom: 10px;
 }
 
 ::-webkit-scrollbar {
   width: 0; 
   background: transparent; 
 }
-
-body{
-    padding: 20px;
-}
-
-ul {
-    list-style: none;
-}
-
-.container{
-    display: flex;
-    margin-top: -20px;
-}
-
-.boxOne{
-    margin: 20px;
-    height: 750px;
-    overflow-y: scroll;
-}
-
-.boxTwo{
-    margin: 20px;
-    height: 750px;
-    overflow-y: scroll;
-}
-
-.topMenu{
-    margin-top: -15px;
-}
-
-.btn--top {
-    text-transform: uppercase;
-    background-color: #4300c0;
-    color: #fff ;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 12px 24px;
-    border-radius: 6px;
-    margin: 15px 0px 15px 15px;
-    cursor: pointer;
+ 
+/* input[type='radio'] {
+    box-sizing: border-box;
+    appearance: none;
+    background: white;
+    outline: 2px solid #333;
+    border: 2px solid white;
+    border-radius: 20%;
+    width: 14px;
+    height: 14px;
   }
   
-  .btn--top:hover,
-  .btn--top:active {
-    background-color: #4800ce;
+  input[type='radio']:checked {
+    background: #333;
   }
-  /* input[type=radio] {
-    border: 1px solid rgb(0, 0, 0);
-    padding: 0.5em;
-    -webkit-appearance: none;
+
+  input[type='checkbox'] {
+    box-sizing: border-box;
+    appearance: none;
+    background: white;
+    outline: 2px solid #333;
+    border: 2px solid white;
+    border-radius: 20%;
+    width: 14px;
+    height: 14px;
   }
-  
-  input[type=radio]:checked {
-    background-color: 'black';
-    background-size: 0.5em;
-  }
-  
-  input[type=radio]:focus {
-    outline-color: transparent;
+
+  input[type='checkbox']:checked {
+    background: #333;
   } */
