--- a/css/styles.css
+++ b/css/styles.css
@@ -1,104 +1,249 @@
 *{
     font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none; 
     -khtml-user-select: none;  
     -moz-user-select: none; 
     -ms-user-select: none; 
     user-select: none; 
-}
+    box-sizing: border-box;
+        
+    }
+
+    ::-webkit-scrollbar {
+        width: 0.4em;
+        border-top-left-radius: 50% ;
+        border-top-right-radius: 50%;
+      }
+       
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-top-left-radius: 5px ;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+      }
+       
+    ::-webkit-scrollbar-thumb {
+        background-color: darkgrey;
+        outline: 1px solid slategrey;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+      }
+
+      ul {
+        list-style: none;}
+
 
 body{
-    padding: 20px;
-    max-height: 100vh;
     padding: 0px;
     margin: 0px;
 }
-
 .container{
-    display: flex;
-    margin-top: -25px;
-}
-
-.boxOne{
-    margin: 30px 20px 20px 20px;
-    max-height: 99vh;
-    overflow: scroll;
-    overflow-x: hidden;
-}
-
-.boxTwo{
-    margin: 30px 20px 20px 20px;
-    max-height: 88vh;
-    max-width: 60vw;
-    overflow: scroll;
-    overflow-x: hidden;
-}
-
-.boxOneHome{
-    margin: 30px 20px 20px 20px;
-    max-height: 88vh;
-    overflow: scroll;
-    overflow-x: hidden;
-}
-
-.boxTwoHome{
-    margin: 30px 20px 20px 20px;
-    max-height: 88vh;
-    max-width: 60vw;
-    overflow: scroll;
-    overflow-x: hidden;
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1.3fr 2fr 3fr;
+    grid-template-areas: 
+                        'topMenu topMenu topMenu'
+                        'happenings users doneHappenings'
+    ;
 }
 
 .topMenu{
-    margin-top: 10px;
-    margin-left: 20px;
+    grid-area: topMenu;
+    margin: 1rem;
+}
+
+.happeningsColumn{
+    /* background-color: cadetblue; */
+    grid-area: happenings;
+    max-height: 100vh;
+    overflow: auto;
+    margin-left: 1rem;
 }
 
 .deleteAndEdit{
-  margin-left: 20px;
-  margin-top: 25px;
+    margin-left: 1rem;
 }
 
-.happeningAndUsers{
-    width: 400px;
-    max-height: 80vh;
+.doneHappeningsColumn{
+    /* background-color: cornflowerblue; */
+    grid-area: doneHappenings;
+    max-height: 100vh;
     overflow: scroll;
     overflow-x: hidden;
-    margin-bottom: 10px;
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
 }
 
-::-webkit-scrollbar {
-  width: 0; 
-  background: transparent; 
+.happeningList{
+    margin-top: 3.53rem;
 }
- 
-/* input[type='radio'] {
-    box-sizing: border-box;
-    appearance: none;
-    background: white;
-    outline: 2px solid #333;
-    border: 2px solid white;
-    border-radius: 20%;
-    width: 14px;
-    height: 14px;
-  }
-  
-  input[type='radio']:checked {
-    background: #333;
-  }
 
-  input[type='checkbox'] {
-    box-sizing: border-box;
-    appearance: none;
-    background: white;
-    outline: 2px solid #333;
-    border: 2px solid white;
-    border-radius: 20%;
-    width: 14px;
-    height: 14px;
-  }
+.userColumn{
+    /* background-color: darkslategray; */
+    grid-area: users;
+    max-height: 100vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+}
 
-  input[type='checkbox']:checked {
-    background: #333;
-  } */
+.containerAdmin{
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 400px 400px;
+    grid-template-areas: 
+                        'topMenu topMenu'
+                        'users happenings'
+    ;
+    /* background-color: aqua; */
+}
+
+
+.happeningsAdminColumn{
+    grid-area: happenings;
+    /* background-color: cadetblue; */
+    max-height: 90vh;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    /* background-color: cornflowerblue; */
+    /* opacity: 75%; */
+}
+
+
+.usersAdminColumn{
+    /* background-color: cadetblue; */
+    /* background-color: cadetblue; */
+    grid-area: users;
+    max-height: 90vh;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    overflow: scroll;
+    overflow-x: hidden;
+    /* opacity: 75%; */
+}
+
+.addArrangementBox, .addPersonBox{
+    /* background-color: cornflowerblue; */
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+}
+
+.adminUsers{
+    max-height: 73vh;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.adminDoneHappenings{
+    max-height: 90vh;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+.btn--top{
+    margin-right: 0.3rem;
+}
+
+.addBtn{
+    width: 1.75rem;
+}
+
+.drawButton, .btn--top, .addBtn {
+    background-color: #ffffff;
+    border-style: none;
+    border: 1px solid slategray;
+    border-radius: 2px 2px 2px 2px;
+    height: 1.65rem;
+}
+
+.btn--delete{
+    font-weight: 700;
+    display: flex;
+    padding:8px;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn--delete, .btn--edit {
+    float: right;
+    transform: translateX(-20px);
+    margin-right: 2px;
+    background-color: #ffffff;
+    border-style: none;
+    border: 1px solid slategray;
+    border-radius: 2px 2px 2px 2px;
+    height: 1.65rem;
+}
+
+.addBtn:hover{
+    transition: 0.5s;
+    background-color: #0075ff;
+}
+
+.addBtn:active{
+    transition: 0.5s;
+    background-color: #0461cc;
+}
+
+.btn--edit:hover{
+    transition: 0.5s;
+    background-color: #0075ff;
+}
+
+.btn--edit:active{
+    transition: 0.5s;
+    background-color: #0461cc;
+}
+.btn--delete:hover{
+    transition: 0.5s;
+    background-color: #0075ff;
+}
+
+.btn--delete:active{
+    transition: 0.5s;
+    background-color: #0461cc;
+}
+.drawButton:hover{
+    transition: 0.5s;
+    background-color: #0075ff;
+}
+
+.drawButton:active{
+    transition: 0.5s;
+    background-color: #0461cc;
+}
+
+.btn--top:hover{
+    transition: 0.5s;
+    background-color: #0075ff;
+}
+
+.btn--top:active{
+    transition: 0.5s;
+    background-color: #0461cc;
+}
+
+.deleteComments{
+    margin-left: 1rem;
+}
+
+
+.participantList{
+    max-width: 50vw;
+}
+
+.loginInput{
+    margin-left: 1rem;
+}
